# stmm-input

./: .gitignore  .gitmodules  .travis.yml  CHANGES  INSTALL  README.md  install_stmm-input-all.py  install_stmm-input-all.sh  sourcepackage.py  sourcepackage.sh
device-floater/: CMakeLists.txt  INSTALL  README  install_device-floater.py  install_device-floater.sh
device-floater/scripts/: install_device-floater.py  uninstall_device-floater.py
device-floater/src/: config.cc.in  config.h  devicefloater.cc  devicefloater.h  main.cc  xideviceswindow.cc  xideviceswindow.h
libstmm-input/: CMakeLists.txt  INSTALL  NEWS  README.md  install_libstmm-input.py  install_libstmm-input.sh  stmm-input-defs.cmake  stmm-input.pc.in
libstmm-input-base/: CMakeLists.txt  INSTALL  NEWS  README.md  install_libstmm-input-base.py  install_libstmm-input-base.sh  stmm-input-base-defs.cmake  stmm-input-base.pc.in
libstmm-input-base/doc/: CMakeLists.txt
libstmm-input-base/scripts/: install_libstmm-input-base.py  uninstall_libstmm-input-base.py
libstmm-input-base/src/: basicdevice.cc  basicdevicemanager.cc  callifsimplifier.cc  callifsimplifier.h  childdevicemanager.cc  parentdevicemanager.cc  stddevice.cc  stddevicemanager.cc  stmm-input-base-config.cc.in  stmm-input-base.cc  util.h  utilbase.cc  utilbase.h
libstmm-input-base/test/: CMakeLists.txt  testCallIfSimplifier.cxx
libstmm-input-dl/: .gitignore  CMakeLists.txt  INSTALL  NEWS  README.md  stmm-input-dl-defs.cmake  stmm-input-dl.pc.in
libstmm-input-dl/doc/: CMakeLists.txt
libstmm-input-dl/scripts/: install_libstmm-input-dl.py  uninstall_libstmm-input-dl.py
libstmm-input-dl/src/: dlpinfos.cc  dlpinfos.h  dlutil.cc  dlutil.h  plugininterface.cc  pluginsdevicemanager.cc  stmm-input-dl-config.cc.in
libstmm-input-dl/test/: CMakeLists.txt  testPluginsDeviceManager.cxx  testconfig.cc.in  testconfig.h
libstmm-input-ev/: CMakeLists.txt  INSTALL  NEWS  README.md  install_libstmm-input-ev.py  install_libstmm-input-ev.sh  stmm-input-ev-defs.cmake  stmm-input-ev.pc.in
libstmm-input-ev/doc/: CMakeLists.txt
libstmm-input-ev/scripts/: install_libstmm-input-ev.py  uninstall_libstmm-input-ev.py
libstmm-input-ev/src/: devicemgmtcapability.cc  devicemgmtevent.cc  joystickcapability.cc  joystickevent.cc  keycapability.cc  keyevent.cc  pointercapability.cc  pointerevent.cc  stddevicemanager.cc  stdparentdevicemanager.cc  stmm-input-ev-config.cc.in  stmm-input-ev.cc  touchcapability.cc  touchevent.cc  utilev.cc  utilev.h
libstmm-input-ev/test/: CMakeLists.txt  testEventClass.cxx  testJoystickAxisEventClass.cxx  testJoystickButtonEventClass.cxx  testJoystickCapabilityClass.cxx  testJoystickHatEventClass.cxx  testKeyEventClass.cxx  testPointerEventClass.cxx  testPointerScrollEventClass.cxx  testTouchEventClass.cxx
libstmm-input-fake/: CMakeLists.txt  INSTALL  NEWS  README.md  install_libstmm-input-fake.py  stmm-input-fake-defs.cmake  stmm-input-fake.pc.in
libstmm-input-fake/doc/: CMakeLists.txt
libstmm-input-fake/scripts/: install_libstmm-input-fake.py  uninstall_libstmm-input-fake.py
libstmm-input-fake/src/: fakedevice.cc  fakedevicemanager.cc  fakejoystickdevice.cc  fakekeydevice.cc  fakepointerdevice.cc  faketouchdevice.cc  stmm-input-fake-config.cc.in  stmm-input-fake.cc
libstmm-input-fake/test/: CMakeLists.txt  fixtureFakeDM.h  testFakeDeviceManager.cxx
libstmm-input-gtk/: CMakeLists.txt  INSTALL  NEWS  README.md  install_libstmm-input-gtk.py  install_libstmm-input-gtk.sh  stmm-input-gtk-defs.cmake  stmm-input-gtk.pc.in
libstmm-input-gtk-dm/: CMakeLists.txt  INSTALL  NEWS  README.md  stmm-input-gtk-dm-defs.cmake  stmm-input-gtk-dm.pc.in
libstmm-input-gtk-dm/doc/: CMakeLists.txt
libstmm-input-gtk-dm/doc-all/: README.md
libstmm-input-gtk-dm/scripts/: install_libstmm-input-gtk-dm.py  uninstall_libstmm-input-gtk-dm.py
libstmm-input-gtk-dm/src/: floatingsources.cc  floatingsources.h  flogtkbackend.h  flogtkdevicemanager.cc  flogtkdevicemanager.h  flogtklistenerextradata.h  flogtkwindowdata.h  flogtkxkeyboarddevice.cc  flogtkxkeyboarddevice.h  gtkdevicemanager.cc  joysticksources.cc  joysticksources.h  jsdevicefiles.cc  jsgtkbackend.cc  jsgtkbackend.h  jsgtkdevicemanager.cc  jsgtkdevicemanager.h  jsgtkjoystickdevice.cc  jsgtkjoystickdevice.h  jsgtklistenerextradata.cc  jsgtklistenerextradata.h  jsgtkwindowdata.cc  jsgtkwindowdata.h  masgtkbackend.cc  masgtkbackend.h  masgtkdevicemanager.cc  masgtkdevicemanager.h  masgtkkeyboarddevice.cc  masgtkkeyboarddevice.h  masgtklistenerextradata.cc  masgtklistenerextradata.h  masgtkpointerdevice.cc  masgtkpointerdevice.h  masgtkwindowdata.cc  masgtkwindowdata.h  recycler.h  stmm-input-gtk-dm-config.cc.in  stmm-input-gtk-dm.cc
libstmm-input-gtk-dm/test/: CMakeLists.txt  fakeflogtkbackend.h  fakeflogtkdevicemanager.h  fakeflogtkwindowdata.h  fakejsgtkbackend.h  fakejsgtkdevicemanager.h  fakejsgtkwindowdata.h  fakemasgtkbackend.h  fakemasgtkdevicemanager.h  fakemasgtkwindowdata.h  fixtureAllDM.h  fixtureFloDM.h  fixtureGlibApp.h  fixtureJsDM.h  fixtureMasDM.h  fixturevariantEventClasses.h  fixturevariantKeyRepeatMode.h  testAllGtkDeviceManager.cxx  testFloGtkDeviceManager.cxx  testJsGtkDeviceManager.cxx  testMasGtkDeviceManager.cxx  testMasGtkKeyboardDevice.cxx  testMasGtkPointerDevice.cxx
libstmm-input-gtk/doc/: CMakeLists.txt
libstmm-input-gtk/scripts/: install_libstmm-input-gtk.py  uninstall_libstmm-input-gtk.py
libstmm-input-gtk/src/: floatingsources.cc  floatingsources.h  flogtkbackend.cc  flogtkbackend.h  flogtkdevicemanager.cc  flogtkdevicemanager.h  flogtklistenerextradata.h  flogtkwindowdata.cc  flogtkwindowdata.h  flogtkxkeyboarddevice.cc  flogtkxkeyboarddevice.h  gdkkeyconverter.cc  gdkkeyconverterevdev.cc  gtkaccessor.cc  gtkdevicemanager.cc  joysticksources.cc  joysticksources.h  jsgtkbackend.cc  jsgtkbackend.h  jsgtkdevicemanager.cc  jsgtkdevicemanager.h  jsgtkjoystickdevice.cc  jsgtkjoystickdevice.h  jsgtklistenerextradata.h  jsgtkwindowdata.h  keyrepeatmode.cc  masgtkbackend.cc  (+13 more)
stmm-input-plugins/: CMakeLists.txt  INSTALL  NEWS  README  stmm-input-plugins-defs.cmake
(+218 files in other folders)
